fix header padding and wrapping

--- a/css/app.css
+++ b/css/app.css
@@ -71,6 +71,7 @@ section#header .button {
 .header-name {
 	color: #fefefe;
 	text-transform: uppercase;
+	padding-top: 0.25rem;
 }
 /* hero */
 section#hero {
